Tried test and split module of sklearn lib

--- a/Salary.ipynb
+++ b/Salary.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNwmrZsRAdYq8NhVHx3e5m"
+      "authorship_tag": "ABX9TyOsZ+eRlxB2FD/DFaEwKZqY",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,8 +17,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Aseem2004/Demo/blob/main/Salary.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "id": "diKxEe7qi-yv"
       },
@@ -36,7 +47,7 @@
       "metadata": {
         "id": "7Vfs9zRbf6xj"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -50,9 +61,9 @@
           "height": 206
         },
         "id": "BRV--s9Dgo-m",
-        "outputId": "d9fc122a-1fb2-41e4-c121-5a9267f92a23"
+        "outputId": "3657bdd8-3853-4eab-8f63-77aa58755ee6"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -67,7 +78,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1a5a48ce-22ca-462c-a8f3-d775ba7db6a4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-56b01172-2826-40fc-910a-720109315063\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -122,7 +133,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1a5a48ce-22ca-462c-a8f3-d775ba7db6a4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-56b01172-2826-40fc-910a-720109315063')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -174,12 +185,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1a5a48ce-22ca-462c-a8f3-d775ba7db6a4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-56b01172-2826-40fc-910a-720109315063 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1a5a48ce-22ca-462c-a8f3-d775ba7db6a4');\n",
+              "        const element = document.querySelector('#df-56b01172-2826-40fc-910a-720109315063');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -199,8 +210,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-bef8621a-9ea3-4d28-8eb3-2fcc3a216c82\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bef8621a-9ea3-4d28-8eb3-2fcc3a216c82')\"\n",
+              "<div id=\"df-5e7cc400-4732-4ed2-8fb1-795e5d136036\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5e7cc400-4732-4ed2-8fb1-795e5d136036')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -319,7 +330,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-bef8621a-9ea3-4d28-8eb3-2fcc3a216c82 button');\n",
+              "        document.querySelector('#df-5e7cc400-4732-4ed2-8fb1-795e5d136036 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -330,7 +341,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 6
         }
       ]
     },
@@ -344,9 +355,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JXsxp8tuhY68",
-        "outputId": "0064b182-ee0b-45b1-8a59-f9b802a5290e"
+        "outputId": "7c0488b8-bec0-4e6c-c460-08f29e627b3e"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,9 +387,9 @@
           "height": 300
         },
         "id": "6z4nPzq1heHu",
-        "outputId": "f1b13f55-16da-4b0d-f4af-16c8f31f8dea"
+        "outputId": "3f11bcfe-8c0a-487e-aefb-07f36df2e925"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -396,7 +407,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-48a6b33c-a0d8-4bb3-ae2a-1846a1d08dc3\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f050fe64-f1b8-4709-a167-461c82dfc7aa\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -466,7 +477,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-48a6b33c-a0d8-4bb3-ae2a-1846a1d08dc3')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f050fe64-f1b8-4709-a167-461c82dfc7aa')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -518,12 +529,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-48a6b33c-a0d8-4bb3-ae2a-1846a1d08dc3 button.colab-df-convert');\n",
+              "        document.querySelector('#df-f050fe64-f1b8-4709-a167-461c82dfc7aa button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-48a6b33c-a0d8-4bb3-ae2a-1846a1d08dc3');\n",
+              "        const element = document.querySelector('#df-f050fe64-f1b8-4709-a167-461c82dfc7aa');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -543,8 +554,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-58061b4a-e53a-4b71-8ac2-3a26aca93190\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-58061b4a-e53a-4b71-8ac2-3a26aca93190')\"\n",
+              "<div id=\"df-c0b66f32-c66a-44a6-a10f-f0501830e9b0\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c0b66f32-c66a-44a6-a10f-f0501830e9b0')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -663,7 +674,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-58061b4a-e53a-4b71-8ac2-3a26aca93190 button');\n",
+              "        document.querySelector('#df-c0b66f32-c66a-44a6-a10f-f0501830e9b0 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -674,7 +685,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 8
         }
       ]
     },
@@ -688,9 +699,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eJs2WlfpheWQ",
-        "outputId": "07ab3db2-7ece-4097-bcd9-7dbb749ca35b"
+        "outputId": "30d77552-5cef-4b63-f5c5-05d96be31625"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -700,7 +711,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 9
         }
       ]
     },
@@ -714,9 +725,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P4j0LlDbheZr",
-        "outputId": "4a3ebc2f-6e9e-40ae-e182-a19fb5c96013"
+        "outputId": "1337ae65-abe9-403a-a212-4bb85740eca8"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -726,7 +737,125 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " #Step - 3 (Defining dependent (y) and independent (x) variables)\n",
+        " #Here there are 2 columns, salary and work experience, so clearly salary depends on exp. years and not the other way round i.e. x=exp. years and y=salary\n",
+        " y=salary[\"Salary\"]\n",
+        " x=salary[[\"Experience Years\"]]"
+      ],
+      "metadata": {
+        "id": "GRbqZ96Li-dG"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.shape\n",
+        "# It is a column vector"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F3lENsP-vcLA",
+        "outputId": "18b7f7e9-dd76-492e-a12c-0b0ae388a860"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(40, 1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y.shape\n",
+        "# It is a flat vector"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9pq5tOVjvSfd",
+        "outputId": "92d99313-6827-485e-c4e8-c170f1a473e1"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(40,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Step - 4 (Train Test Split from sklearn)\n",
+        "from sklearn.model_selection import train_test_split"
+      ],
+      "metadata": {
+        "id": "LyCmGiuUvdYU"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train,x_test,y_train,y_test=train_test_split(x,y)"
+      ],
+      "metadata": {
+        "id": "dSNVerL1hcAa"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train.shape,x_test.shape,y_train.shape,y_test.shape\n",
+        "#It splits the dataframe in 4 parts. Initialy had 40 columns, but now it's 30+10."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1r0BfAfMh91e",
+        "outputId": "2a3d8bc3-dec5-4122-a8eb-e7dfab60edac"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((30, 1), (10, 1), (30,), (10,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     }
