--- a/Salary.ipynb
+++ b/Salary.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO93GHk0NQK9pDkZtrR18ry"
+      "authorship_tag": "ABX9TyM7vwySk12dGXG8bYKxWrSK",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Aseem2004/Demo/blob/main/Salary.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 5,
@@ -1791,6 +1802,37 @@
       "metadata": {
         "id": "hTMPaktqIKzC"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Step - 7 (Prediction)\n",
+        "model.predict(x_test)\n",
+        "\n",
+        "# Here x_test values are put in formula and the model gives a prediction according to it."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YlQ5jDexK_2C",
+        "outputId": "18595a18-d67c-4447-bebe-c8a8c65fd446"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 69334.98315618,  64605.30338877,  64605.30338877,  83524.02245843,\n",
+              "        45686.5843191 ,  61767.49552832, 117577.71678382,  85415.89436539,\n",
+              "       126091.14036516,  50416.26408652,  82578.08650494,  57037.8157609 ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     }
   ]
 }
