Accuracy of model

--- a/Salary.ipynb
+++ b/Salary.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7vwySk12dGXG8bYKxWrSK",
+      "authorship_tag": "ABX9TyMhyN/FiFDbT/eFZcYQJCyk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1807,8 +1807,8 @@
       "cell_type": "code",
       "source": [
         "#Step - 7 (Prediction)\n",
-        "model.predict(x_test)\n",
-        "\n",
+        "y_pred=model.predict(x_test)\n",
+        "y_pred\n",
         "# Here x_test values are put in formula and the model gives a prediction according to it."
       ],
       "metadata": {
@@ -1816,9 +1816,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YlQ5jDexK_2C",
-        "outputId": "18595a18-d67c-4447-bebe-c8a8c65fd446"
+        "outputId": "510997c4-d73a-46f0-9e92-e7a103905419"
       },
-      "execution_count": 34,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1830,9 +1830,129 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 38
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Step - 8 (Accuracy of model)\n",
+        "# It is calculated in 3 ways: mean_absolute_error, mean_absolute_percentage_error, mean_squared_error\n",
+        "\n",
+        "from sklearn.metrics import mean_absolute_error, mean_absolute_percentage_error, mean_squared_error"
+      ],
+      "metadata": {
+        "id": "ZiY29yXSL9Uv"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mean_absolute_error(y_test,y_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q4oKzbwvZ1Oe",
+        "outputId": "f34be8c8-37b1-4f8e-a051-877e5e46e235"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5211.981371554558"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here the error is calculated by finding mean of all absolute errors."
+      ],
+      "metadata": {
+        "id": "6CoLS6x0aR1t"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " mean_absolute_percentage_error(y_test,y_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NiY-RMqfZ1QG",
+        "outputId": "918fced1-9163-455f-b4f9-32330a591343"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.0761963556601618"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This gives the % error i.e. here error is approx 7%.\n",
+        "So, accuracy is approx 93% which is decent."
+      ],
+      "metadata": {
+        "id": "iaxYJfMracpT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mean_squared_error(y_test,y_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3CPp4RF4Z1Te",
+        "outputId": "1183fb74-baf1-43ab-80b0-76eb2fb45678"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "35344480.17477033"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here the error is calculated by finding mean of all absolute errors squared."
+      ],
+      "metadata": {
+        "id": "21hK9biragNa"
+      }
     }
   ]
 }
